Corrigindo horarios e página finalizado

--- a/booking/templates/booking/finalizado.html
+++ b/booking/templates/booking/finalizado.html
@@ -9,7 +9,7 @@
     </div>
 
     <h2 class="finalizado-titulo">Agendamento Confirmado!</h2>
-    <p class="finalizado-sub">Seu horário foi registrado com sucesso.</p>
+    <p class="finalizado-sub">Seu horário foi registrado com sucesso!!</p>
 
     <div class="finalizado-card">
         <p><strong>Nome:</strong> {{ nome }}</p>
