--- a/booking/templates/booking/home.html
+++ b/booking/templates/booking/home.html
@@ -5,7 +5,7 @@
 
 <section class="home">
 
-    <img src="{% static 'img/studio menezes.jpg' %}" class="logo">
+    <img src="{% static 'img/logo2.png' %}" class="logo">
 
     <h1>STUDIO<br>MENEZES</h1>
 
